# ome_zarr_conformance

./: README.md  dingus.py  main.py  pyproject.toml
src/ome_zarr_conformance/: __init__.py  __main__.py  ome_zarr_conformance.py
