[project]
name = "ome_zarr_conformance"
version = "0.1.0"
description = "Conformance tests for any OME-Zarr metadata implementation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pooch>=1.8.2",
    "pydantic>=2.12.3",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.2",
]

[project.scripts]
ome-zarr-conformance = "ome_zarr_conformance.ome_zarr_conformance:main"
